--- a/app/src/main/res/layout/signup_main.xml
+++ b/app/src/main/res/layout/signup_main.xml
@@ -30,7 +30,7 @@
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:gravity="center"
-        android:hint="username"
+        android:hint="Username"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -51,7 +51,7 @@
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:gravity="center"
-        android:hint="No. IC"
+        android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -71,7 +71,7 @@
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:gravity="center"
-        android:hint="Confirm No. IC"
+        android:hint="Confirm Password"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="@color/black"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="username"
+        android:text="Username"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/si_username"
@@ -97,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="No. IC"
+        android:text="Password"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/si_password"
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Confirm No. IC"
+        android:text="Confirm Password"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/re_confirmPassword"
