--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
-    <item
-        android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_profile" />
-
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-    <item
-        android:id="@+id/navigation_timetable"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_timetable" />
+    <group >
+        <item
+            android:id="@+id/navigation_home"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="@string/title_home" />
+        <item
+            android:id="@+id/navigation_profile"
+            android:icon="@drawable/ic_dashboard_black_24dp"
+            android:title="@string/title_profile" />
+        <item
+            android:id="@+id/navigation_timetable"
+            android:icon="@drawable/ic_notifications_black_24dp"
+            android:title="@string/title_timetable" />
+    </group>
 
 </menu>
