--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,6 +16,10 @@
             android:id="@+id/navigation_timetable"
             android:icon="@drawable/ic_notifications_black_24dp"
             android:title="@string/title_timetable" />
+        <item
+            android:id="@+id/navigation_feedback"
+            android:icon="@drawable/ic_baseline_feedback_24"
+            android:title="@string/title_feedback" />
     </group>
 
 </menu>
